--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "astro": "astro"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "astro": "^5.1.6",
-    "sass": "^1.83.4"
+    "sass": "^1.83.4",
+    "swiper": "^11.2.1"
+  },
+  "devDependencies": {
+    "@types/aos": "^3.0.7"
   }
 }
